<resources>
    <string name="app_name">Palette Town</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="camera_button_content_description">Button to take a picture</string>
    <string name="uploadButtonDesc">Button to upload an image from file</string>
    <string name="cameraPrompt">Take a Picture</string>
    <string name="uploadPrompt">Upload an Image</string>
    <string name="uploadHint">Or upload from URL</string>
    <string name="urlImageDesc">Upload from URL Image</string>
    <string name="homePageTitle">Saved Palettes</string>
    <string name="addPaletteDesc">add new palette button</string>
    <string name="settingsButtonDesc">Settings button</string>
    <string name="savedPalettesText">Saved Palettes</string>
    <string name="imageSelectHelp">Please select an image to create its color palette.</string>
    <string name="undoDelete">Undo delete palette?</string>
    <string name="saveChangesButton">Save Changes</string>
    <string name="undoColorShift">Undo color shift?</string>
    <string name="noSavedPalettes">No saved palettes found. Please select an image to create a new palette.</string>
    <string name="hueBarLabel">Hue</string>
    <string name="saturationBarLabel">Sat</string>
    <string name="valueBarLabel">Val</string>
    <string name="saveChangesButtonText">Save Changes</string>
    <string name="revertChangesButtonText">Revert Changes</string>
    <string name="toggleHexOptionLabel">HEX</string>
    <string name="toggleRGBOptionLabel">RGB</string>
    <string name="invertColorsLabel">Inverted</string>
    <string name="grayscaleColorsLabel">Grayscale</string>
    <string name="noFilterColorsLabel">Normal</string>
    <string name="editFullPaletteTitle">Edit Palette</string>
</resources>
