<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/imageSelectLayout"
    tools:context=".ImageSelectActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_marginBottom="30dp"
        android:text="@string/imageSelectHelp"
        android:textSize="25sp"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingHorizontal="50dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginBottom="30dp"
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="60dp"
        android:paddingStart="10dp"
        android:paddingEnd="40dp"
        android:text="@string/cameraPrompt"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:layout_marginBottom="30dp"
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:drawableStart="@drawable/ic_upload"
        android:drawablePadding="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="40dp"
        android:text="@string/uploadPrompt"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <LinearLayout
        android:paddingHorizontal="50dp"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/urlUpload"
            android:layout_width="230dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:autofillHints="Image upload from URL"
            android:focusedByDefault="false"
            android:hint="@string/uploadHint"
            android:inputType="textUri"
            android:nextFocusLeft="@id/urlUpload"
            android:nextFocusUp="@id/urlUpload"
            android:layout_marginLeft="25dp"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/urlUploadButton"
            android:src="@drawable/ic_upload_external"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/urlImageDesc" />
    </LinearLayout>
</LinearLayout>