<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout">

    <TextView
        android:id="@+id/headerTextView"
        android:textSize="30sp"
        android:layout_marginVertical="40dp"
        android:text="@string/savedPalettesText"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/headerTextView"
        android:id="@+id/savedPalettesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/emptyText"
        android:text="@string/noSavedPalettes"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="25sp"
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/addNewPaletteButton"
        android:src="@drawable/plus"
        android:scaleType="fitCenter"
        android:focusable="true"
        android:clickable="true"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/addPaletteDesc" />

</RelativeLayout>