<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFullPaletteActivity">

    <EditText
        android:id="@+id/paletteNameEditText"
        android:textAlignment="center"
        android:singleLine="true"
        android:hint="Palette name goes here."
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/colorsInPalette"
        android:orientation="horizontal"
        android:layout_below="@id/paletteNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/paletteColor1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"/>

        <View
            android:id="@+id/paletteColor2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"/>

        <View
            android:id="@+id/paletteColor3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"/>

        <View
            android:id="@+id/paletteColor4"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"/>

        <View
            android:id="@+id/paletteColor5"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"/>

        <View
            android:id="@+id/paletteColor6"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/labelSaturationBar"
        android:text="@string/saturationBarLabel"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="20dp"
        android:layout_below="@id/colorsInPalette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/changeAllSaturationBar"
        android:max="255"
        android:layout_toEndOf="@id/labelSaturationBar"
        android:layout_alignBottom="@id/labelSaturationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/labelValueBar"
        android:text="@string/valueBarLabel"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="20dp"
        android:layout_below="@id/labelSaturationBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/changeAllValueBar"
        android:max="255"
        android:layout_toEndOf="@id/labelValueBar"
        android:layout_alignBottom="@id/labelValueBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/revertChangesButton"
            android:text="@string/revertChangesButtonText"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/saveChangesButton"
            android:text="@string/saveChangesButtonText"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>