<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/paletteActivity"
    tools:context=".PaletteActivity">

    <RelativeLayout
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/paletteViewTitle"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:singleLine="true"
            android:maxLength="20"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="25dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_toStartOf="@id/paletteViewSettingsButton"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toggleHexOptionLabel"
                android:text="@string/toggleHexOptionLabel"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <Switch
                android:id="@+id/viewModeToggle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/toggleRGBOptionLabel"
                android:text="@string/toggleRGBOptionLabel"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:paddingStart="5dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>



        <ImageView
            android:id="@+id/paletteViewSettingsButton"
            android:src="@drawable/gear"
            android:scaleType="fitCenter"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/settingsButtonDesc" />

    </RelativeLayout>

    <ListView
        android:id="@+id/colorList"
        android:divider="@android:color/black"
        android:dividerHeight="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>